# bevy_physics_2d

./: Cargo.toml  flake.nix
examples/: demo_02_collider.rs  demo_03_velocity_gravity.rs  demo_04_force_impulse.rs  demo_07_joint.rs
examples/physics/: demo_01_rigidbody.rs  demo_05_locking_daming.rs  demo_06_friction_restitution.rs
examples/sprite/: demo_01_sprite.rs  demo_02_flipping.rs  demo_03_sprite_tile.rs  demo_04_sprite_slice.rs
