[package]
name = "bevy_demos"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d_bevy_render", "dynamic_linking", "wayland"] }
bevy_rapier2d = "0.33.0"

# Bevy debug builds are much more usable with a little optimization on local code.
[profile.dev]
opt-level = 1
debug = "line-tables-only"

# Heavier engine dependencies benefit from stronger optimization even during development.
[profile.dev.package."*"]
opt-level = 3

# Favor runtime quality for shipping builds.
[profile.release]
codegen-units = 1
lto = "thin"
