[package]
name = "bevy_demos"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["2d_bevy_render", "dynamic_linking", "wayland"] }
bevy_rapier2d = "0.33.0"

# Bevy debug builds are much more usable with a little optimization on local code.
[profile.dev]
opt-level = 1
debug = "line-tables-only"

# Heavier engine dependencies benefit from stronger optimization even during development.
[profile.dev.package."*"]
opt-level = 3

# Favor runtime quality for shipping builds.
[profile.release]
codegen-units = 1
lto = "thin"

[[example]]
name = "rigidbody"
path = "examples/physics/demo_01_rigidbody.rs"

[[example]]
name = "collider"
path = "examples/physics/demo_02_collider.rs"

[[example]]
name = "velocity_gravity"
path = "examples/physics/demo_03_velocity_gravity.rs"

[[example]]
name = "force_impulse"
path = "examples/physics/demo_04_force_impulse.rs"

[[example]]
name = "locking_daming"
path = "examples/physics/demo_05_locking_daming.rs"

[[example]]
name = "friction_restitution"
path = "examples/physics/demo_06_friction_restitution.rs"

[[example]]
name = "joint"
path = "examples/physics/demo_07_joint.rs"

[[example]]
name = "sprite"
path = "examples/sprite/demo_01_sprite.rs"
